<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.FirstFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPrimero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/numero_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiePrimero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSegundo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPrimero">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieSegundo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/numero_2" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/plus"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/btnMenos"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilSegundo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMenos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/btnDividir"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnMas"
        app:layout_constraintTop_toTopOf="@+id/btnMas" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDividir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divided"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/btnMultiplicar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnMenos"
        app:layout_constraintTop_toTopOf="@+id/btnMenos" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMultiplicar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiplied"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDividir"
        app:layout_constraintTop_toTopOf="@+id/btnDividir" />



    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:background="?attr/colorPrimary"
        android:fontFamily="@font/anton"
        android:text="@string/result"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMas" />

</androidx.constraintlayout.widget.ConstraintLayout>